git HEAD

    * EFA: Fix crash when ->results is called after a network error occured
    * efa-m: Add --timeeout option

Travel::Status::DE::VRR 1.08 - Mon Mar 03 2014

    * efa-m: Add -o, --offset option
    * Fix ->platform and ->platform_db accessors (the EFA API was changed)

Travel::Status::DE::VRR 1.07 - Tue Jan 07 2014

    * efa-m: Add previously undocumented -L option to manual
    * efa-m: Handle UTF8 in place/stop input
    * Travel::Status::DE::EFA: Handle decoded input with non-ASCII characters

Travel::Status::DE::VRR 1.06 - Thu Jan 02 2014

    * Add Travel::Status::DE::EFA module, move ::Result and ::Line to
      Travel::Status::DE::EFA. Travel::Status::DE::VRR now inherits from
      ::EFA, no API changes were made.
    * Travel::Status::DE::EFA has a mandatory efa_url parameter to set the
      entry point to an EFA service

Travel::Status::DE::VRR 1.05 - Wed Dec 18 2013

    * Add -r, --relative option to use relative times
    * Support lines without Operator field (e.g. Aachen / ASEAG)

Travel::Status::DE::VRR 1.04 - Wed Oct 16 2013

    * Add ->key accessor to Travel::Status::DE::VRR::Line
      (meaning is unknown)
    * Add ->is_cancelled accessor to Travel::Status::DE::VRR::Result
    * Travel::Status::DE::VRR::Result->delay will no longer return '-9999'
      for cancelled departures, check ->is_cancelled instead
    * Allow Travel::Status::DE::VRR::Line and TraveL::Status::DE::VRR::Result
      to be serialized to JSON (via TO_JSON method)

Travel::Status::DE::VRR 1.03 - Tue Sep 17 2013

    * Disable smartmatch warnings on perl >= 5.018

Travel::Status::DE::VRR 1.02 - Wed Apr 10 2013

    * Patch by Roland Hieber: respect proxy environment variables

Travel::Status::DE::VRR 1.01 - Mon Nov 26 2012

    * Properly parse "tram canceled" information (EVAG, maybe also VRR)

Travel::Status::DE::VRR 1.00 - Sat Dec 03 2011

    * switch to efa.vrr.de XML interface
    * properly decode UTF-8 strings